@@ -9,6 +9,7 @@ debsig-verify (0.24) UNRELEASED; urgency=medium
     - Rename .gpg keyrings to .pgp.
     - Abstract OpenPGP details into debsig_openpgp_* functions.
     - Check OpenPGP backend availability.
+    - Add sqop and sq OpenPGP backend support.
 
  -- Guillem Jover <guillem@debian.org>  Sat, 20 Mar 2021 01:50:00 +0100
 
